  5. Added new GMODIFY fields: RESOURCE (string substitute for MATERIAL), and MATERIALTYPE
  6. New standard races: Pegasus, Pegacorn
  7. Improvements to glassblowing and boatwright recipes.
  8. Journal messages can now be forwarded to the senders game mailbox, even if smtp server isn't running.
  9. Can now use CREATE A CAT to quickly generate a GenMOB of a particular race.

# Build 5.9.7 Release 08/29/2018
   1. Scholars gain XP from visiting bookstores, and can study dissertations.
   2. A lot of the old static strings in rideables are now customizable by editors, Shipwright/Wainwright
   3. Small boats can TENDER themselves to large ships now, and be RAISEd and LOWERd.
   4. New Area field: Player Level, for overriding median level as a fake statistic.
   5. MUDGrinder Statistic Report now has Areas Report, just like command line did.
   6. New Command and Property: Gait - similar to mood or pose, for your walk-around.
   7. Can now retrieve lost password from player access menu.
   8. New Properties: Banishment, Prop_MoveRestrictor
   9. ROMGangMember behavior messages now customizable.
  10. Scavenger behavior now allows an item zappermask to limit types of items picked up.
  11. New Diseases: Writers Block, Apathy, Blindness, Anosmia, Deafness, Muteness
  12. New Skills: Hammering, Find Home, Find Ship, Food Preserving, Autoswim, Autocrawl
  13. Lassos are more farmer friendly now -- can be untied after throwing, no combat starting, etc.
  14. Wands and Staffs now have their max charges settable from common skill recipes.
  15. New LIST COMMANDJOURNALS
  16. Shipwright has all new recipes with new wonders to behold.
  17. REPORT command can now report expertises and languages also.
  18. New Spells: Conjure Ammunition, Harden Bullets, Light Blindness, Mystic Loom
  19. ZapperMask now supports +-ACCOUNTS and +-LOCATION
  20. New Prayer: Mass Forgive
  21. New common skills: Legendary Weaponsmithing, Floristry, Master Herbology, WandMaking