@@ -8,6 +8,7 @@
   7. Improvements to glassblowing and boatwright recipes.
   8. Journal messages can now be forwarded to the senders game mailbox, even if smtp server isn't running.
   9. Can now use CREATE A CAT to quickly generate a GenMOB of a particular race.
+  10. Items in npc mob inventory can now be set to populate only at boot time.
 
 # Build 5.9.7 Release 08/29/2018
    1. Scholars gain XP from visiting bookstores, and can study dissertations.
